<resources>
    <string name="app_name">Xmp Mod Player</string>
    <string name="app_description">
        A modplayer that plays over 90 mainstream and obscure module formats,
        including Protracker (MOD), Scream Tracker 3 (S3M),
        Fast Tracker II (XM) and Impulse Tracker (IT).
    </string>
    <string name="changelog_text">
        Version 4.15.0:\n
        • Numerous fixes in libxmp\n
        • Refreshed UI\n
        • Migrated project to Kotlin\n
        • Updated dependencies\n
        • Android 10 (API 29) compatibility\n
        • Raised minimum support to Lollipop (API 21)\n
        • Added media session\n
        • Player views can be smoother (in options)\n
        • Various fixes and refactoring under the hood\n
        \nVersion 4.12.0:\n
        • Improve XM and STM compatibility\n
        • Improve Android Oreo compatibility\n
        \nVersion 4.11.0:\n
        • Fix MDL c5spd and sample decoder\n
        • Fix MASI loader subchunks\n
        • Fix sample loop corner case\n
        • Fix set pan in multichannel MODs\n
        • Fix global volume on module loop\n
        • Fix IT right pan limit\n
        • Fix memory leak in XMs with 256 patterns\n
        \nVersion 4.10.0:\n
        • Fix IT sample loop length\n
        • Fix IT sample sustain loop\n
        • Fix IT voice leak caused by disabled envelope\n
        • Fix XM arpeggio in FT2 compatible mode\n
        • Fix XM envelope position set\n
        • Fix 669 periods and tempo\n
        • Fix bidirectional sample loop interpolation\n
        • Fix mixer click removal\n
        • Add Amiga 500 mixer option\n
        \nVersion 4.9.0:\n
        • Fix IT fine volslide + row delay\n
        • Fix IT old instrument volume\n
        • Fix IT panbrello speed\n
        • Fix IT random pan left bias\n
        • Fix IT default pan in sample mode\n
        • Fix XM/MOD set finetune effect\n
        • Fix S3M set pan effect\n
        \nVersion 4.8.0:\n
        • Fix IT note off with instrument\n
        • Fix IT note recover after cut\n
        • Fix IT pattern break row number\n
        • Fix IT volume swing\n
        • Fix XM glissando effect\n
        • Fix S3M period limits\n
        • Fix S3M subsong detection\n
        • Fix GAL4 number of patterns\n
        • Add support to TP1, TP2 and PP10 formats\n
    </string>
    <string name="changelog_title">What\'s new in version %s</string>
    <string name="changelog">Changelog</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="grant">Grant</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="dismiss">Dismiss</string>
    <string name="error">Error</string>
    <string name="directory">Directory</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="no_comment">No comment</string>
    <string name="frowny_face">:(</string>
    <string name="download">Download</string>
    <string name="select">Select</string>
    <string name="settings">Settings</string>
    <string name="random">Random</string>
    <string name="search">Search</string>
    <string name="play">Play</string>
    <string name="empty_comment">Long press modules to create new playlists or add to existing playlists. Long press playlists for more options.</string>
    <string name="empty_playlist">Empty playlist</string>
    <string name="pref_theme_array_light">Light</string>
    <string name="pref_theme_array_dark">Dark</string>
    <string name="pref_theme_array_default">System Default</string>
    <string name="pref_examples_title">Install modules</string>
    <string name="pref_examples_summary">Install example music files when creating modules directory</string>
    <string name="pref_sampling_rate_summary">Set the mixer sampling rate</string>
    <string name="pref_sampling_rate_title">Sampling rate</string>
    <string name="pref_list_formats_title">Known formats</string>
    <string name="pref_list_formats_summary">List all supported module formats</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_summary">View version and application info</string>
    <string name="pref_media_path_title">Modules pathname</string>
    <string name="pref_media_path_summary">The directory where mod files are located</string>
    <string name="pref_vol_boost_title">Volume boost</string>
    <string name="pref_vol_boost_summary">Set output volume amplification factor</string>
    <string name="pref_playlist_mode_title">Playlist click behavior</string>
    <string name="pref_playlist_mode_summary">Choose default action when clicking on playlist item</string>
    <string name="pref_pan_separation_title">Stereo separation</string>
    <string name="pref_pan_separation_summary">Set the mixer stereo separation</string>
    <string name="pref_default_pan_title">Default pan separation</string>
    <string name="pref_default_pan_summary">Set the default pan separation in old modules with hard L—R channels</string>
    <string name="pref_amiga_mixer_summary">Enable A500 simulation mixer for Amiga formats (uses more CPU)</string>
    <string name="pref_amiga_mixer_title">Amiga mixer</string>
    <string name="pref_interpolate_summary">Interpolate samples</string>
    <string name="pref_interpolate_title">Interpolation</string>
    <string name="pref_interp_type_summary">Set sample interpolation method</string>
    <string name="pref_interp_type_title">Interpolation type</string>
    <string name="pref_all_sequences_summary">Play all existing patterns/subsongs</string>
    <string name="pref_all_sequences_title">Hidden patterns</string>
    <string name="pref_back_button_navigation_summary">Back button returns to parent directory</string>
    <string name="pref_back_button_navigation_title">Back button navigation</string>
    <string name="pref_start_on_player_summary">If a module is playing, launch in the player screen</string>
    <string name="pref_start_on_player_title">Launch in player screen</string>
    <string name="pref_modarchive_folder_summary">Download to TheModArchive subfolder</string>
    <string name="pref_modarchive_folder_title">TheModArchive folder</string>
    <string name="pref_artist_folder_summary">Organize downloads by artist</string>
    <string name="pref_artist_folder_title">Artist folders</string>
    <string name="pref_buffer_ms_summary">Sound buffer duration</string>
    <string name="pref_buffer_ms_title">Buffer size</string>
    <string name="pref_buffer_ms_dialog">Set the size of sound buffer in milliseconds:</string>
    <string name="pref_clear_cache_summary">Clear module information cache</string>
    <string name="pref_clear_cache_title">Clear cache</string>
    <string name="pref_show_toast_title">Display toasts</string>
    <string name="pref_show_toast_summary">Enable interface help messages</string>
    <string name="pref_show_info_line_title">Replay status</string>
    <string name="pref_show_info_line_summary">Show replay information and time</string>
    <string name="pref_keep_screen_on_summary">Prevent screen from sleeping during replay</string>
    <string name="pref_keep_screen_on_title">Keep screen on</string>
    <string name="pref_use_filename_title">File names in playlist</string>
    <string name="pref_use_filename_summary">Display file names instead of titles in playlists</string>
    <string name="pref_enable_delete_title">Enable file delete</string>
    <string name="pref_enable_delete_summary">Display a menu option to delete the currently playing file</string>
    <string name="pref_category_sound">Sound settings</string>
    <string name="pref_category_sound_disabled">Sound settings (Disabled when playing)</string>
    <string name="pref_category_files">Playlist settings</string>
    <string name="pref_category_mixer_control">Mixer control</string>
    <string name="pref_category_player_control">Player control</string>
    <string name="pref_category_information">Information</string>
    <string name="pref_category_interface">Interface settings</string>
    <string name="pref_category_modarchive">Download settings</string>
    <string name="pref_category_download">Download location</string>
    <string name="pref_category_experimental">Experimental (be careful)</string>
    <string name="pref_category_preferences">Preferences</string>
    <string name="pref_category_iface_info">Information</string>
    <string name="pref_category_iface_screen">Screen</string>
    <string name="pref_category_file_general">General</string>
    <string name="pref_category_file_playlists">Playlists</string>
    <string name="preferences_pan_separation_dialog">Set the mixer stereo separation:</string>
    <string name="preferences_default_pan_dialog">Set the default pan separation:</string>
    <string name="pref_category_notifications">Notifications</string>
    <string name="pref_category_player_interface">Player</string>
    <string name="pref_draw_lines_summary">Enabling this will render the player viewer at ~50fps and use a better waveform drawing. Older/Lower end phones may experience frame drops.</string>
    <string name="pref_draw_lines_title">Use better waveform</string>
    <string name="pref_lib_summary">Code repository for libxmp</string>
    <string name="pref_lib_title">Libxmp Repo</string>
    <string name="pref_notification_summary">Use Android\'s Media Style notification or classic notification</string>
    <string name="pref_notification_title">Use Media Style Notifications</string>
    <string name="pref_player_hex_summary">Show the player\'s info bar to show hex or decimal values</string>
    <string name="pref_player_hex_title">Show hex values</string>
    <string name="pref_site_summary">View more information about libxmp</string>
    <string name="pref_site_title">Website</string>
    <string name="pref_support_summary">Create or View issues about Xmp Mod Player</string>
    <string name="pref_support_title">Support</string>
    <string name="menu_prefs">Settings</string>
    <string name="menu_download">Download</string>
    <string name="menu_new_playlist">New playlist</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_clear_history">Clear history</string>
    <string name="error_datadir">Can\'t create data directory. Please check your storage card and try again.</string>
    <string name="error_create_playlist">Can\'t create playlist.</string>
    <string name="error_rename_playlist">Can\'t rename playlist.</string>
    <string name="error_edit_comment">Can\'t edit comment.</string>
    <string name="error_write_to_playlist">Can\'t write to this playlist.</string>
    <string name="error_read_comment">Can\'t read comment.</string>
    <string name="error_storage">Can\'t access external storage.</string>
    <string name="error_dir_not_under_moddir">Directory not under mod dir</string>
    <string name="error_no_files_to_play">No files to play</string>
    <string name="error_audiofocus">Audio focus request failed</string>
    <string name="button_play_all">Play all</string>
    <string name="button_toggle_loop">Toggle loop</string>
    <string name="button_toggle_shuffle">Toggle shuffle</string>
    <string name="desc_show_module_message">Show Module Message</string>
    <string name="about_author">Written by Claudio Matsuoka</string>
    <string name="info_speed">Speed:%s</string>
    <string name="info_bpm">BPM:%s</string>
    <string name="info_position">Pos:%s</string>
    <string name="info_pattern">Pat:%s</string>
    <string name="sheet_details">Module details</string>
    <string name="sheet_patterns">Patterns:</string>
    <string name="sheet_instruments">Instruments:</string>
    <string name="sheet_samples">Samples:</string>
    <string name="sheet_channels">Channels:</string>
    <string name="sheet_button_allseqs">Play all subsongs</string>
</resources>