<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="settings"
    app:title="@string/settings">

    <PreferenceCategory app:title="Theme">
        <ListPreference
            app:defaultValue="default"
            app:entries="@array/themeListArray"
            app:entryValues="@array/themeEntryArray"
            app:key="themePref"
            app:summary="Choose the interface theme for the application"
            app:title="Choose theme" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_preferences">
        <PreferenceScreen
            app:key="category"
            app:title="@string/pref_category_files">
            <PreferenceCategory app:title="@string/pref_category_file_general">
                <EditTextPreference
                    app:defaultValue="/sdcard/mod"
                    app:key="media_path"
                    app:persistent="true"
                    app:summary="@string/pref_media_path_summary"
                    app:title="@string/pref_media_path_title" />

                <CheckBoxPreference
                    app:defaultValue="true"
                    app:key="examples"
                    app:persistent="true"
                    app:summary="@string/pref_examples_summary"
                    app:title="@string/pref_examples_title" />
            </PreferenceCategory>

            <PreferenceCategory app:title="@string/pref_category_file_playlists">
                <ListPreference
                    app:defaultValue="1"
                    app:entries="@array/playlist_mode_array"
                    app:entryValues="@array/playlist_mode_values"
                    app:key="playlist_mode"
                    app:persistent="true"
                    app:summary="@string/pref_playlist_mode_summary"
                    app:title="@string/pref_playlist_mode_title" />

                <CheckBoxPreference
                    app:defaultValue="false"
                    app:key="use_filename"
                    app:persistent="true"
                    app:summary="@string/pref_use_filename_summary"
                    app:title="@string/pref_use_filename_title" />

                <CheckBoxPreference
                    app:defaultValue="true"
                    app:key="back_button_navigation"
                    app:persistent="true"
                    app:summary="@string/pref_back_button_navigation_summary"
                    app:title="@string/pref_back_button_navigation_title" />

                <Preference
                    app:key="clear_cache"
                    app:summary="@string/pref_clear_cache_summary"
                    app:title="@string/pref_clear_cache_title" />
            </PreferenceCategory>
        </PreferenceScreen>

        <PreferenceScreen
            app:key="sound_screen"
            app:title="@string/pref_category_sound">
            <PreferenceCategory app:title="@string/pref_category_mixer_control">
                <ListPreference
                    app:defaultValue="44100"
                    app:entries="@array/sampling_rate_array"
                    app:entryValues="@array/sampling_rate_values"
                    app:key="sampling_rate"
                    app:persistent="true"
                    app:summary="@string/pref_sampling_rate_summary"
                    app:title="@string/pref_sampling_rate_title" />

                <SeekBarPreference
                    android:defaultValue="400"
                    android:dialogMessage="@string/pref_buffer_ms_dialog"
                    android:key="buffer_ms_opensl"
                    android:max="1000"
                    android:persistent="true"
                    android:summary="@string/pref_buffer_ms_summary"
                    android:text="ms"
                    android:title="@string/pref_buffer_ms_title"
                    app:showSeekBarValue="true" />

                <ListPreference
                    app:defaultValue="1"
                    app:entries="@array/vol_boost_array"
                    app:entryValues="@array/vol_boost_values"
                    app:key="vol_boost"
                    app:persistent="true"
                    app:summary="@string/pref_vol_boost_summary"
                    app:title="@string/pref_vol_boost_title" />

                <CheckBoxPreference
                    app:defaultValue="false"
                    app:key="amiga_mixer"
                    app:persistent="true"
                    app:summary="@string/pref_amiga_mixer_summary"
                    app:title="@string/pref_amiga_mixer_title" />

                <CheckBoxPreference
                    app:defaultValue="true"
                    app:key="interpolate"
                    app:persistent="true"
                    app:summary="@string/pref_interpolate_summary"
                    app:title="@string/pref_interpolate_title" />

                <ListPreference
                    app:defaultValue="1"
                    app:dependency="interpolate"
                    app:entries="@array/interp_type_array"
                    app:entryValues="@array/interp_type_values"
                    app:key="interp_type"
                    app:persistent="true"
                    app:summary="@string/pref_interp_type_summary"
                    app:title="@string/pref_interp_type_title" />

                <SeekBarPreference
                    android:defaultValue="100"
                    android:key="stereo_mix"
                    android:max="100"
                    android:persistent="true"
                    android:summary="@string/pref_pan_separation_summary"
                    android:title="@string/pref_pan_separation_title"
                    app:min="0"
                    app:showSeekBarValue="true" />

                <SeekBarPreference
                    android:defaultValue="50"
                    android:dialogMessage="@string/pref_default_pan_dialog"
                    android:key="default_pan"
                    android:max="100"
                    android:persistent="true"
                    android:summary="@string/pref_default_pan_summary"
                    android:text="%"
                    android:title="@string/pref_default_pan_title"
                    app:min="0"
                    app:showSeekBarValue="true" />

            </PreferenceCategory>

            <PreferenceCategory app:title="@string/pref_category_player_control">
                <CheckBoxPreference
                    app:defaultValue="false"
                    app:key="all_sequences"
                    app:persistent="true"
                    app:summary="@string/pref_all_sequences_summary"
                    app:title="@string/pref_all_sequences_title" />
            </PreferenceCategory>
        </PreferenceScreen>

        <PreferenceScreen
            app:key="interface"
            app:title="@string/pref_category_interface">
            <PreferenceCategory app:title="@string/pref_category_iface_info">
                <CheckBoxPreference
                    app:defaultValue="true"
                    app:key="show_info_line"
                    app:persistent="true"
                    app:summary="@string/pref_show_info_line_summary"
                    app:title="@string/pref_show_info_line_title" />
                <CheckBoxPreference
                    app:defaultValue="true"
                    app:key="show_toast"
                    app:persistent="true"
                    app:summary="@string/pref_show_toast_summary"
                    app:title="@string/pref_show_toast_title" />
            </PreferenceCategory>
            <PreferenceCategory app:title="@string/pref_category_iface_screen">
                <CheckBoxPreference
                    app:defaultValue="false"
                    app:key="keep_screen_on"
                    app:persistent="true"
                    app:summary="@string/pref_keep_screen_on_summary"
                    app:title="@string/pref_keep_screen_on_title" />
                <CheckBoxPreference
                    app:defaultValue="true"
                    app:key="start_on_player"
                    app:persistent="true"
                    app:summary="@string/pref_start_on_player_summary"
                    app:title="@string/pref_start_on_player_title" />
            </PreferenceCategory>

            <PreferenceCategory app:title="@string/pref_category_player_interface">
                <CheckBoxPreference
                    app:defaultValue="false"
                    app:key="player_drag_stay"
                    app:persistent="true"
                    app:summary="@string/pref_drag_lock_summary"
                    app:title="@string/pref_drag_lock_title" />
            </PreferenceCategory>

            <PreferenceCategory app:title="@string/pref_category_experimental">
                <CheckBoxPreference
                    app:defaultValue="false"
                    app:key="enable_delete"
                    app:persistent="true"
                    app:summary="@string/pref_enable_delete_summary"
                    app:title="@string/pref_enable_delete_title" />
            </PreferenceCategory>
        </PreferenceScreen>

        <PreferenceScreen
            app:key="download"
            app:title="@string/pref_category_modarchive">
            <PreferenceCategory app:title="@string/pref_category_download">
                <CheckBoxPreference
                    app:defaultValue="true"
                    app:key="modarchive_folder"
                    app:persistent="true"
                    app:summary="@string/pref_modarchive_folder_summary"
                    app:title="@string/pref_modarchive_folder_title" />
                <CheckBoxPreference
                    app:defaultValue="true"
                    app:key="artist_folder"
                    app:persistent="true"
                    app:summary="@string/pref_artist_folder_summary"
                    app:title="@string/pref_artist_folder_title" />
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_information">
        <Preference
            app:summary="@string/pref_list_formats_summary"
            app:title="@string/pref_list_formats_title">
            <intent android:action="org.helllabs.android.xmp.LIST_FORMATS" />
        </Preference>
        <Preference
            app:summary="@string/pref_about_summary"
            app:title="@string/pref_about_title">
            <intent android:action="org.helllabs.android.xmp.ABOUT" />
        </Preference>
        <Preference
            app:summary="@string/pref_site_summary"
            app:title="@string/pref_site_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://xmp.sourceforge.net/" />
        </Preference>
        <Preference
            app:summary="@string/pref_support_summary"
            app:title="@string/pref_support_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/cmatsuoka/xmp-android/issues" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>