<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/info_line"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <!-- Speed -->
    <TextView
        style="@style/PlayerInfoLine"
        android:singleLine="true"
        android:text="@string/info_speed" />

    <TextView
        android:id="@+id/infoSpeed"
        style="@style/PlayerInfoLine"
        android:gravity="start"
        android:minWidth="18dp"
        android:text="00"
        tools:ignore="HardcodedText" />

    <!-- BPM -->
    <TextView
        style="@style/PlayerInfoLine"
        android:text="@string/info_bpm" />

    <TextView
        android:id="@+id/infoBpm"
        style="@style/PlayerInfoLine"
        android:gravity="start"
        android:minWidth="18dp"
        android:text="00"
        tools:ignore="HardcodedText" />

    <!-- Pos -->
    <TextView
        style="@style/PlayerInfoLine"
        android:text="@string/info_position" />

    <TextView
        android:id="@+id/infoPos"
        style="@style/PlayerInfoLine"
        android:gravity="start"
        android:minWidth="18dp"
        android:text="00"
        tools:ignore="HardcodedText" />

    <!-- Pat -->
    <TextView
        style="@style/PlayerInfoLine"
        android:text="@string/info_pattern" />

    <TextView
        android:id="@+id/infoPat"
        style="@style/PlayerInfoLine"
        android:gravity="start"
        android:minWidth="18dp"
        android:text="00"
        tools:ignore="HardcodedText" />

</LinearLayout>