<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    style="@style/SidebarTheme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxHeight="200dp"
    android:orientation="vertical"
    app:layout_constraintHeight_max="200dp">

    <LinearLayout
        style="@style/SidebarSectionTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center"
        android:minHeight="48dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sheet_details"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/sheet_show_comment"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/desc_show_module_message"
            android:background="?selectableItemBackground"
            android:src="@drawable/ic_info" />

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:columnCount="2">

        <TextView
            style="@style/SidebarDetailsTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sheet_patterns" />

        <TextView
            android:id="@+id/sidebar_num_pat"
            style="@style/SidebarDetailsTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:text="00" />

        <TextView
            style="@style/SidebarDetailsTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sheet_instruments" />

        <TextView
            android:id="@+id/sidebar_num_ins"
            style="@style/SidebarDetailsTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:text="00" />

        <TextView
            style="@style/SidebarDetailsTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sheet_samples" />

        <TextView
            android:id="@+id/sidebar_num_smp"
            style="@style/SidebarDetailsTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:text="00" />

        <TextView
            style="@style/SidebarDetailsTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sheet_channels" />

        <TextView
            android:id="@+id/sidebar_num_chn"
            style="@style/SidebarDetailsTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:text="00" />
    </GridLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sidebar_allseqs_switch"
        style="@style/SidebarSectionTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sheet_button_allseqs" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/sidebar_sequences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </androidx.core.widget.NestedScrollView>

</LinearLayout>