<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".preferences.about.About">

    <include
        android:id="@+id/appbar"
        layout="@layout/layout_appbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/version_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="version_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dip"
                android:text="@string/about_author" />

            <TextView
                android:id="@+id/xmp_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dip"
                tools:text="xmp_version" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="15dip"
                android:text="@string/changelog"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/text_changelog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="6dp"
                android:paddingTop="5dp"
                android:paddingEnd="6dp"
                android:paddingBottom="5dp"
                android:text="@string/changelog_text" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>

